--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.2",
     "astro": "^4.16.10"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
   }
 }
